--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Steel News Dashboard</title>
+    <title>Hashtagsteel News Dashboard</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; background: #f4f4f4; }
         h1 { text-align: center; }
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>📰 Steel News Dashboard</h1>
+    <h1>📰 Hashtagsteel News Dashboard</h1>
     <table>
         <thead>
             <tr>
